# rust-project-boilerplate

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: init.rs  main.rs
xtask/: Cargo.toml
xtask/src/: ci.rs  init.rs  main.rs
