[workspace]
resolver = "3"
members  = [ "xtask", "app" ]

[workspace.dependencies]
clap   = { version = "=4.5.51", default-features = false, features = [] }
log4rs = { version = "=1.4.0",  default-features = false, features = [] }
log    = { version = "=0.4.28", default-features = false, features = [] }
tokio  = { version = "=1.48.0", default-features = false, features = [] }
